[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Settings.gd" type="Script" id=1]
[ext_resource path="res://assets/Cave-Story.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/MenuBackground.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 64.0
margin_top = 16.0
margin_right = 448.0
margin_bottom = 272.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 64.0
margin_top = 16.0
margin_right = 448.0
margin_bottom = 224.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 368.0
margin_bottom = 192.0

[node name="PixelSnap" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_right = 352.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
pressed = true
text = "Pixel Snap"
flat = true

[node name="DisplayMode" type="OptionButton" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 352.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "Display Mode"

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 64.0
margin_top = 224.0
margin_right = 448.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
margin_right = 384.0
margin_bottom = 48.0
alignment = 2

[node name="Reset" type="Button" parent="MarginContainer2/HBoxContainer"]
margin_left = 179.0
margin_right = 288.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Reset To Default"
flat = true

[node name="Save" type="Button" parent="MarginContainer2/HBoxContainer"]
margin_left = 292.0
margin_right = 384.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Save Settings"
flat = true

[connection signal="toggled" from="MarginContainer/VBoxContainer/PixelSnap" to="." method="_on_PixelSnap_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/DisplayMode" to="." method="_on_DisplayMode_item_selected"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Save" to="." method="_on_Save_pressed"]
